<resources>
    <string name="app_name">共享作业提醒</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">注册/登录</string>
    <string name="nav_header_subtitle">个人简介</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">首页</string>
    <string name="menu_homework">我的作业列表</string>

    <string name="menu_tools">Tools</string>
    <string name="menu_setting">设置</string>
    <string name="tab_text_1">未完成作业</string>
    <string name="tab_text_2">已完成作业</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_new_homework">NewHomeworkActivity</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="menu_register">注册</string>
    <string name="menu_login">登录</string>
    <string name="title_activity_user">UserActivity</string>
    <string name="title_activity_homework_detail">HomeworkDetailActivity</string>
    <string name="menu_test">测试Bmob</string>
    <string name="menu_qmui">测试QMUI</string>
    <string name="new_homework_hint_title">请输入标题</string>
    <string name="tv_tip_alarm">设置闹钟提醒</string>
    <string name="tv_tag">标签</string>
    <string name="tv_deadtime">截止时间</string>
    <string name="tv_alarmtime">闹钟时间</string>
    <string name="tv_nickname">昵称</string>
    <string name="tv_school">学校</string>
    <string name="tv_class">班级</string>
    <string name="tv_major">专业</string>
    <string name="text_save">保存</string>
    <string name="title_activity_my_homework_detail">MyHomeworkDetailActivity</string>
    <string name="title_activity_edit_homework">EditHomeworkActivity</string>
    <string name="btn_start">开始</string>
    <string name="btn_pause">暂停</string>
    <string name="btn_resume">继续</string>
    <string name="btn_stop">放弃</string>
    <string name="btn_skip">跳过</string>
    <string name="scene_work">工作</string>
    <string name="scene_short_break">短时休息</string>
    <string name="scene_long_break">长时消息</string>
    <string name="menu_tomato">番茄时钟</string>


    <string name="start">开始</string>
    <string name="stop">结束</string>
    <string name="MSG_STARTED">计时已开始</string>
    <string name="MSG_NOT_STARTED">计时尚未开始</string>
    <string name="MSG_TIME_NOT_SET">尚未设定计时时间</string>
    <string name="MSG_STOPPED">计时结束</string>
    <string name="tv_tip_course">课程</string>
    <string name="tv_content">作业内容</string>
    <string name="menu_modify_password">修改密码</string>
    <string name="menu_about">关于</string>
    <string name="title_activity_about">AboutActivity</string>
    <string name="app_introduce">APP简介：为了解决不让同学经常来问我每次课堂的作业是什么，我觉得开发一个APP来记录课堂作业，并共享，我自己记录下来的作业或者其他同学记录下来的作业，可共享给其他同学看。</string>
    <string name="title_activity_homework">HomeworkActivity</string>

</resources>
