<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/menu_home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_homework"
            android:icon="@drawable/menu_homework"
            android:title="@string/menu_homework" />


<!--        <item-->
<!--            android:id="@+id/nav_register"-->
<!--            android:icon="@drawable/menu_register"-->
<!--            android:title="@string/menu_register" />-->

<!--        <item-->
<!--            android:id="@+id/nav_login"-->
<!--            android:icon="@drawable/menu_register"-->
<!--            android:title="@string/menu_login" />-->

<!--        <item-->
<!--            android:id="@+id/nav_test_bmob"-->
<!--            android:icon="@drawable/menu_register"-->
<!--            android:title="@string/menu_test" />-->

<!--        <item-->
<!--            android:id="@+id/nav_test_qmui"-->
<!--            android:icon="@drawable/menu_register"-->
<!--            android:title="@string/menu_qmui" />-->

        <item
            android:id="@+id/nav_test_tomato"
            android:icon="@drawable/icon_tomato"
            android:title="@string/menu_tomato" />

    </group>

    <item android:title="其他">
        <menu>
<!--            <item-->
<!--                android:id="@+id/nav_share"-->
<!--                android:icon="@drawable/ic_menu_share"-->
<!--                android:title="@string/menu_share" />-->
<!--            <item-->
<!--                android:id="@+id/nav_send"-->
<!--                android:icon="@drawable/ic_menu_send"-->
<!--                android:title="@string/menu_send" />-->
<!--            <item-->
<!--                android:id="@+id/nav_setting"-->
<!--                android:icon="@drawable/ic_menu_manage"-->
<!--                android:title="@string/menu_tools" />-->
            <item
                android:id="@+id/nav_setting"
                android:icon="@drawable/icon_about"
                android:title="@string/menu_about" />
        </menu>
    </item>

</menu>
