<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.homeworkreminder.activity.EditHomeworkActivity"
    tools:showIn="@layout/activity_edit_homework">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/qmui_config_color_white"
        android:orientation="vertical"
        android:padding="0dp">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/qmui_config_color_white">

            <EditText
                android:id="@+id/et_edit_homework_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:background="@color/app_bg_graywhite"
                android:hint="@string/new_homework_hint_title"
                android:padding="10dp"

                android:textSize="25sp"
                tools:ignore="UnusedAttribute" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/qmui_config_color_white">

            <EditText
                android:id="@+id/et_edit_homework_course"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:background="@color/app_bg_graywhite"
                android:hint="@string/tv_tip_course"
                android:padding="10dp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/qmui_config_color_white">

            <EditText
                android:id="@+id/et_edit_homework_content"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:background="@color/app_bg_graywhite"
                android:gravity="top"
                android:hint="内容"
                android:inputType="textMultiLine"
                android:minLines="5"
                android:padding="10dp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/qmui_config_color_white">

            <EditText
                android:id="@+id/et_edit_homework_deadtime"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:background="@color/app_bg_graywhite"
                android:hint="截止日期/时间"
                android:padding="10dp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/qmui_config_color_white">

            <EditText
                android:id="@+id/et_edit_homework_tag"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:background="@color/app_bg_graywhite"
                android:hint="标签（选填）"
                android:padding="10dp" />

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_margin="20dp"
            android:background="#805C5C5C"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_tip_alarm"
            android:textColor="@color/tv_tip_small"
            android:layout_marginLeft="20dp"
            android:layout_marginBottom="5dp"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:background="@color/qmui_config_color_white"
            android:orientation="horizontal">



            <TextView
                android:id="@+id/tv_edit_chooseDate"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="5dp"
                android:layout_weight="1"
                android:background="@color/app_bg_graywhite"
                android:padding="10dp"

                android:text="提醒日期"
                android:textColor="@color/qmui_topbar_text_color"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/tv_edit_chooseTime"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="20dp"
                android:layout_weight="1"
                android:background="@color/app_bg_graywhite"
                android:padding="10dp"
                android:text="提醒时间"
                android:textColor="@color/qmui_topbar_text_color"
                android:textSize="20sp" />
        </LinearLayout>

    </LinearLayout>

</android.support.v4.widget.NestedScrollView>
